--- a/admin_ui/templates/admin_ui/admin_ui.html
+++ b/admin_ui/templates/admin_ui/admin_ui.html
@@ -8,7 +8,7 @@
 <div>
     <div class='lg:grid lg:grid-cols-3 lg:gap-6 mt-6 px-4 lg:px-1'>
         <!--first card-->
-        <div class='w-90 h-40  bg-blue-100 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+        <div class='w-90 h-40  bg-blue-100 border border-l-[10px] border-l-blue-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
             <div class='w-20 h-20 rounded-lg bg-blue-400 flex justify-center items-center'>
                 <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                     <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
@@ -24,8 +24,8 @@
 
         </div>
         <!--second card-->
-        <div class='w-90 h-40  bg-yellow-100 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
-            <div class='w-20 h-20 rounded-lg bg-yellow-400 flex justify-center items-center'>
+        <div class='w-90 h-40  bg-blue-100 border border-l-[10px] border-l-blue-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+            <div class='w-20 h-20 rounded-lg bg-blue-400 flex justify-center items-center'>
                 <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                     <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
                     <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
@@ -35,13 +35,13 @@
 
             <div class='flex flex-col space-y-4'>
                 <p class='text-2xl text-gray-800 font-medium'>56</p>
-                <span class='text-xl text-gray-500 font-semibold'>Dealership Applications</span>
+                <span class='text-xl text-gray-500 font-semibold'>Dealership License</span>
             </div>
 
         </div>
         <!--third card-->
-        <div class='w-90 h-40  bg-rose-100 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
-            <div class='w-20 h-20 rounded-lg bg-rose-400 flex justify-center items-center'>
+        <div class='w-90 h-40  bg-blue-100 border border-l-[10px] border-l-blue-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+            <div class='w-20 h-20 rounded-lg bg-blue-400 flex justify-center items-center'>
                 <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                     <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
                     <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
@@ -55,10 +55,144 @@
             </div>
 
         </div>
+        <!--status cards submit,review,approved and rejected-->
+        <!--first card-->
+        <div class='w-90 h-40  bg-amber-100 border border-l-[10px] border-l-amber-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+            <div class='w-20 h-20 rounded-lg bg-amber-400 flex justify-center items-center'>
+                <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                    <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
+                    <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
+                  </svg>
+                  
+            </div>
+
+            <div class='flex flex-col space-y-4'>
+                <p class='text-2xl text-gray-800 font-medium'>{{approvals_under_review}}</p>
+                <span class='text-xl text-gray-500 font-semibold'>Reviewed Applications 🧐</span>
+            </div>
+
+        </div>
+        <!--second card-->
+        <div class='w-90 h-40  bg-rose-100 border border-l-[10px] border-l-rose-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+            <div class='w-20 h-20 rounded-lg bg-rose-400 flex justify-center items-center'>
+                <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                    <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
+                    <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
+                  </svg>
+                  
+            </div>
+
+            <div class='flex flex-col space-y-4'>
+                <p class='text-2xl text-gray-800 font-medium'>{{rejected_apps}}</p>
+                <span class='text-xl text-gray-500 font-semibold'>Rejected Applications ❌</span>
+            </div>
+
+        </div>
+        <!--third card-->
+        <div class='w-90 h-40  bg-emerald-100 border border-l-[10px] border-l-emerald-500 flex items-center justify-between px-4 rounded-tl-3xl rounded-br-3xl'>
+            <div class='w-20 h-20 rounded-lg bg-emerald-400 flex justify-center items-center'>
+                <svg class='size-8 ' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                    <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
+                    <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
+                  </svg>
+                  
+            </div>
+
+            <div class='flex flex-col space-y-4'>
+                <p class='text-2xl text-gray-800 font-medium'>{{approved_apps}}</p>
+                <span class='text-xl text-gray-500 font-semibold'>Approved Applications <span class='text-emerald-400'>✔</span></span>
+            </div>
+
+        </div>
 
         
 
     </div>
+
+    
+    <div class='mt-8'>
+
+        <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">
+                            Product name
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Color
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Category
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Price
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            <span class="sr-only">Edit</span>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                            Apple MacBook Pro 17"
+                        </th>
+                        <td class="px-6 py-4">
+                            Silver
+                        </td>
+                        <td class="px-6 py-4">
+                            Laptop
+                        </td>
+                        <td class="px-6 py-4">
+                            $2999
+                        </td>
+                        <td class="px-6 py-4 text-right">
+                            <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        </td>
+                    </tr>
+                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                            Microsoft Surface Pro
+                        </th>
+                        <td class="px-6 py-4">
+                            White
+                        </td>
+                        <td class="px-6 py-4">
+                            Laptop PC
+                        </td>
+                        <td class="px-6 py-4">
+                            $1999
+                        </td>
+                        <td class="px-6 py-4 text-right">
+                            <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        </td>
+                    </tr>
+                    <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                            Magic Mouse 2
+                        </th>
+                        <td class="px-6 py-4">
+                            Black
+                        </td>
+                        <td class="px-6 py-4">
+                            Accessories
+                        </td>
+                        <td class="px-6 py-4">
+                            $99
+                        </td>
+                        <td class="px-6 py-4 text-right">
+                            <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    {{type_approvals}}
+
+
 </div>
 
 {% endblock content %}
