--- a/admin_ui/templates/admin_ui/type_approval.html
+++ b/admin_ui/templates/admin_ui/type_approval.html
@@ -1,8 +1,8 @@
-{% extends "core/base.html" %}
-
+{% extends "admin_ui/admin_base.html" %}
 
 {% block content %}
-<h2 class='font-light text-3xl p-4 text-center mb-2'>My Type Approvals </h2>
+
+<h2 class='font-normal text-3xl text-gray-800 p-4 text-center mb-2'>Type Approval Applications</h2>
 <section class="container px-4 mx-auto mb-6">
     <div class="flex flex-col">
         <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
@@ -52,8 +52,8 @@
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200 dark:divide-gray-700 dark:bg-gray-900">
-                            {% if type_approvals  %}
-                                {% for approval in type_approvals  %}
+                            {% if type_approval_list  %}
+                                {% for approval in type_approval_list  %}
                                 
                                 <tr>
                                     
@@ -66,12 +66,12 @@
                                         <div class="flex items-center gap-x-2">
                                             <img class="object-cover w-8 h-8 rounded-full" src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
                                             <div>
-                                                <h2 class="text-sm font-medium text-gray-800 dark:text-white ">Arthur Melo</h2>
+                                                <h2 class="text-sm font-medium text-gray-800 dark:text-white ">{{approval.customer}}</h2>
                                                 <p class="text-xs font-normal text-gray-600 dark:text-gray-400">{{approval.email}}</p>
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-nowrap">{{approval.postal_address}}
+                                    <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-wrap">{{approval.postal_address}}
                                     </td>
                                     <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-nowrap">{{approval.phone_no}}
                                     </td>
@@ -96,17 +96,14 @@
     
                                             <h2 class="text-sm font-normal">{{approval.status}}</h2>
                                         </div>
-
                                         {% elif approval.status == 'under review'%}
-                                        <div class="inline-flex items-center px-3 py-1 text-amber-500 rounded-full gap-x-2 bg-amber-100/60 dark:bg-gray-800">
+                                        <div class="inline-flex items-center px-3 py-1 text-amber-500 rounded-full gap-x-2 bg-amber-100/60  dark:bg-gray-800">
                                             <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M4.5 7L2 4.5M2 4.5L4.5 2M2 4.5H8C8.53043 4.5 9.03914 4.71071 9.41421 5.08579C9.78929 5.46086 10 5.96957 10 6.5V10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                             </svg>
     
                                             <h2 class="text-sm font-normal">{{approval.status}}</h2>
                                         </div>
-
-
 
                                         {% elif approval.status == 'rejected' %}
                                         <div class="inline-flex items-center px-3 py-1 text-red-500 rounded-full gap-x-2 bg-red-100/60 dark:bg-gray-800">
@@ -126,13 +123,16 @@
                                     </td>
                                     <td class="px-4 py-4 text-sm whitespace-nowrap">
                                         <div class="flex items-center gap-x-6">
-                                            <a href="{% url 'user_ui:approval-view' approval.id%}" class="text-gray-500 transition-colors duration-200 dark:hover:text-indigo-500 dark:text-gray-300 hover:text-indigo-500 focus:outline-none " id="default-modal" tabindex="-1" aria-hidden="true">
+                                            <a href="{% url 'details' approval.id%}" class="text-gray-500 transition-colors duration-200 dark:hover:text-indigo-500 dark:text-gray-300 hover:text-indigo-500 focus:outline-none " data-modal-target='default-modal' data-modal-toggle='default-modal' type='button'>
                                                 View Details
+                                                
                                             </a>
-                                    </td> 
+                                            
+                                                       
+                                        </div>
+                                    </td>
                                     <td class="px-4 py-4 text-sm whitespace-nowrap">
-                                        <div class="flex items-center gap-x-6">    
-    
+                                        <div class="flex items-center gap-x-6">
                                             <button class="text-blue-500 transition-colors duration-200 hover:text-indigo-500 focus:outline-none">
                                                 Download
                                             </button>
