--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,9 +9,10 @@
         
         {% load static %}
         {% tailwind_css %}
-        <link rel="icon" sizes="128x128" href="{% static 'images/ncafavicon.ico'}" type="image/x-icon">
-        <link rel="shortcut icon" sizes="128x128" href="{% static 'images/ncafavicon.ico'}" type="image/x-icon">
+        
+        <link rel="website icon" type='png' href="{% static 'images/ncalogo.png'%}">
         <link rel="stylesheet" type="text/css" href="{% static 'static/css/main.css'%}">
+        <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
         <title>RA PORTAL</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -319,8 +320,8 @@
      </div>
   </footer>
 
-
-
+    <!--flowbite js-->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 
     <script type="text/javascript" src="{% static 'static/js/script.js'%}"></script>
 </body>
