--- a/admin_ui/templates/admin_ui/details.html
+++ b/admin_ui/templates/admin_ui/details.html
@@ -127,11 +127,16 @@
         </div>
 
 
-       
         
 
         
     </div>
+    <!--end of details view-->
+    <!--buttons-->
+    <div class='h-20 p-6 rounded-md'>
+        still working on buttons
+    </div>
+
 </div>
 {% endblock content %}
 
