--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -21,7 +21,7 @@
 <!-- TYPE APPROVAL BUTTONS -->
 <div class="flex flex space-x-4 md:justify-start">
 <a href="{% url 'user_ui:type-approval'%}"class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">TYPE APPROVAL</a>
-<a href="#"class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">DEALERSHIP LICENSE</a>
+<a href="{% url 'user_ui:dealership'%}"class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">DEALERSHIP LICENSE</a>
 </div>
        </div>    
        
