--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -19,7 +19,7 @@
                                     d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
                             </svg>
                         </div>
-                        {{form.username}}
+                        {{loginform.username}}
                     </div>
 
                     <div class="mb-2 flex items-center justify-center">
@@ -31,7 +31,7 @@
                                     clip-rule="evenodd" />
                             </svg>
                         </div>
-                        {{form.password}}
+                        {{loginform.password}}
                     </div>
 
                     <p class="text-right"><a href="" class="text-xs text-white font-light hover:underline">Forgot
