--- a/admin_ui/templates/admin_ui/details.html
+++ b/admin_ui/templates/admin_ui/details.html
@@ -133,7 +133,7 @@
 <!--end of details view-->
 <!--buttons-->
 <div class='h-20 p-6 rounded-md'>
-    <h1 class='text-center'>button div</h1>
+    
     <form method='post' class='mb-4'>
         {% csrf_token %}
     
@@ -144,7 +144,7 @@
                 {{form.status}}
             </div>
 
-            <button type='submti' class='py-4 px-2 bg-blue-500 text-white text-lg rounded-md w-40 hover:bg-blue-700 '>SAVE</button>
+            <button type='submti' class='py-4 px-2 bg-blue-500 text-white text-lg rounded-md w-40 hover:bg-blue-700 hover:-translate-y-0.5 transform focus:outline-none focus:ring-2 animate-bounce '>SAVE</button>
         </div>
      
         
