commit from fixing bugs branch

--- a/user_ui/templates/user_ui/my_approvals.html
+++ b/user_ui/templates/user_ui/my_approvals.html
@@ -66,7 +66,7 @@
                                         <div class="flex items-center gap-x-2">
                                             <img class="object-cover w-8 h-8 rounded-full" src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
                                             <div>
-                                                <h2 class="text-sm font-medium text-gray-800 dark:text-white ">Arthur Melo</h2>
+                                                <h2 class="text-sm font-medium text-gray-800 dark:text-white ">{{approval.contact_person}}</h2>
                                                 <p class="text-xs font-normal text-gray-600 dark:text-gray-400">{{approval.email}}</p>
                                             </div>
                                         </div>
