--- a/admin_ui/templates/admin_ui/type_approval.html
+++ b/admin_ui/templates/admin_ui/type_approval.html
@@ -3,8 +3,10 @@
 {% block content %}
 
 <h2 class='font-normal text-3xl text-gray-800 p-4 text-center mb-2'>Type Approval Applications</h2>
+<a href="{% url 'approval-text'%}">Get list</a>
 <div class='mt-6'>
-    <form method="get" class='flex justify-between'>
+    <form method="get" class='flex justify-between p-6'>
+        {% csrf_token %}
         {{myFilter.form}}
         <button type='submit' class='py-2 px-6 rounded-md bg-sky-400 hover:bg-sky-600'>search</button>
     </form>
